--- a/requirements.txt
+++ b/requirements.txt
@@ -1,84 +1,16 @@
-absl-py==0.11.0
-appdirs==1.4.4
-astunparse==1.6.3
-audioread==2.1.9
-beautifulsoup4==4.9.3
-cachetools==4.2.1
-certifi==2020.12.5
-cffi==1.14.5
-chardet==4.0.0
-clean==0.1.4
-click==7.1.2
-colorama==0.4.4
-console-menu==0.6.0
-ConsoleMenu==1.0.1
-cycler==0.10.0
-decorator==4.4.2
-Flask==1.1.2
-flatbuffers==1.12
-gast==0.3.3
-google-auth==1.27.1
-google-auth-oauthlib==0.4.3
-google-pasta==0.2.0
-grpcio==1.32.0
-h5py==2.10.0
-idna==2.10
-ipynb-py-convert==0.4.6
-itsdangerous==1.1.0
-Jinja2==2.11.2
-joblib==1.0.1
-Keras==2.4.3
-Keras-Preprocessing==1.1.2
-keyboard==0.13.5
-kiwisolver==1.3.1
-librosa==0.8.0
-llvmlite==0.36.0
-mako==1.1.3
-Markdown==3.3.4
-MarkupSafe==1.1.1
-matplotlib==3.2.0
-networkx==2.5
-numba==0.53.0
-numpy==1.19.4
-oauthlib==3.1.0
-opencv-python==4.5.1.48
-opt-einsum==3.3.0
-packaging==20.9
-pandas==1.1.4
-Pillow==8.1.2
-pooch==1.3.0
-protobuf==3.15.5
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.20
-pyparsing==2.4.7
-pysocks==1.7.1
-python-dateutil==2.8.1
-pytz==2020.4
-PyYAML==5.4.1
-requests==2.25.1
-requests-oauthlib==1.3.0
-resampy==0.2.2
-rsa==4.7.2
-scikit-learn==0.24.1
-scipy==1.5.4
-six==1.15.0
-sklearn==0.0
-sounddevice==0.4.1
-SoundFile==0.10.3.post1
-soupsieve==2.1
-tensorboard==2.4.1
-tensorboard-plugin-wit==1.8.0
-tensorflow==2.4.1
-tensorflow-estimator==2.4.0
-termcolor==1.1.0
-threadpoolctl==2.1.0
-tld==0.12.4
-tqdm==4.54.0
-typing-extensions==3.7.4.3
-urllib3==1.26.2
-wapiti3==3.0.3
-Werkzeug==1.0.1
-Wikipedia-API==0.5.4
-wrapt==1.12.1
-yaswfp==0.9.3
+os
+datetime
+shutil
+flask
+librosa
+soundfile
+numpy
+glob
+pandas
+sys
+keras
+sounddevice
+colorama
+sklearn
+requests
+pillow
