--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,11 @@
-os
-datetime
-shutil
-flask
+Flask
 librosa
-soundfile
 numpy
-glob
 pandas
-sys
-keras
+Keras
 sounddevice
+SoundFile
 colorama
 sklearn
 requests
-pillow
+Pillow
