--- a/.slugignore
+++ b/.slugignore
@@ -1,2 +1,8 @@
 MoniqueTornado/audio
 MoniqueTornado
+Portail/camera/0_25
+Portail/camera/25_50
+Portail/camera/50_75
+Portail/camera/75_100
+Portail/camera/closed
+Portail/camera/open
